# ncbi-vdb-sys

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: CI.yml
examples/: dump.rs
src/: lib.rs  parallel.rs  reader.rs
src/core/: klib.rs  mod.rs  vdb.rs
src/safe/: error.rs  klib.rs  mod.rs  vdb.rs
