[package]
name = "ncbi-vdb-sys"
version = "0.1.5"
edition = "2021"
description = "FFI library for the NCBI VDB"
license = "MIT"
authors = ["Noam Teyssier <noam.teyssier@arcinstitute.org>"]
repository = "https://github.com/arcinstitute/ncbi-vdb-sys"
documentation = "https://docs.rs/ncbi-vdb-sys"
categories = ["science::bioinformatics"]
keywords = ["bioinformatics", "nucleotide", "genomics", "SRA", "FFI"]

[dependencies]
thiserror = "2.0.11"

[dev-dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.28", features = ["derive"] }

[build-dependencies]
num_cpus = "1.16.0"
walkdir = "2.5.0"

[profile.release]
lto = true
codegen-units = 1
